--- a/index.html
+++ b/index.html
@@ -1,46 +1,62 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Brian Sahota</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Brian Sahota</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
+  <body class="is-preload">
+    <!-- Wrapper -->
+    <div id="wrapper">
+      <!-- Main -->
+      <div id="main">
+        <div class="inner">
+          <!-- Header -->
+          <header id="header">
+            <h2 class="logo"><strong>Brian Sahota</strong></h2>
+            <ul class="icons">
+              <li>
+                <a
+                  name="Github"
+                  target="_blank"
+                  href="https://github.com/scratchytube"
+                  class="icon brands fa fa-github"
+                  ><span class="label">Github</span></a
+                >
+              </li>
+              <li>
+                <a
+                  name="Linked-In"
+                  target="_blank"
+                  href="https://linkedin.com/in/bsahota"
+                  class="icon brands fa fa-linkedin"
+                  ><span class="label">LinkedIn</span></a
+                >
+              </li>
+            </ul>
+          </header>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+          <!-- Banner -->
+          <section id="banner">
+            <div class="content">
+              <header>
+                <h1>Hey i'm Brian.</h1>
+                <p>Software engineer residing in Brooklyn, NY.</p>
+              </header>
+            </div>
+            <span class="image object">
+              <img src="images/it-me.png" alt="" />
+            </span>
+          </section>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-
-							<!-- Header -->
-								<header id="header">
-									<h2 class="logo"><strong>Brian Sahota</strong></h2>
-									<ul class="icons">
-										<li><a name="Github" target="_blank" href="https://github.com/scratchytube" class="icon brands fa fa-github"><span class="label">Github</span></a></li>
-										<li><a name="Linked-In" target="_blank" href="https://linkedin.com/in/bsahota" class="icon brands fa fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									</ul>
-								</header>
-
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h1>Hey i'm Brian.</h1>
-											<p>Software engineer residing in Brooklyn, NY.</p>
-										</header>
-									</div>
-									<span class="image object">
-										<img src="images/it-me.png" alt="" />
-									</span>
-								</section>
-
-							<!-- Section -->
-								<section>
+          <!-- Section -->
+          <!-- <section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>Latest Projects</h2>
 									</header>
 									<div class="features">
 										<article>
@@ -72,82 +88,165 @@
 											</div>
 										</article>
 									</div>
-								</section>
+								</section> -->
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Ipsum sed dolor</h2>
-									</header>
-									<div class="posts">
-										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-											<h3>Interdum aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-									</div>
-								</section>
+          <!-- Section -->
+          <section>
+            <header class="major">
+              <h2>Latest Projects</h2>
+            </header>
+            <div class="posts">
+              <article>
+                <a href="#" class="image"
+                  ><img src="images/ff.png" alt="freelance founders website image"
+                /></a>
+                <h3>Freelance Founders</h3>
+                <p>
+                  <strong
+                    >Javascript, Vue, Tailwind, Sanity Cloud CMS, MemberStack
+                    API, Vercel</strong
+                  >
+                  - Full Stack web application designed
+                  exclusively for freelancers seeking to elevate their careers.
+                  With a focus on fostering a vibrant community, the platform
+                  offers a secure, paywalled environment where professionals can
+                  sign up to network, share insights, and discover a wide range
+                  of job postings and events tailored to their skills and
+                  interests.
+                </p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.freelancefounders.com"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
+                </ul>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img src="images/cardon.png" alt=""
+                /></a>
+                <h3>Cardon</h3>
+                <p>
+                  <strong>Javascript, Vue, Tailwind, Shopify</strong>
+                  - Custom E-Commerce Website providing Korean skincare products
+                  to customers in the U.S. Built with a Javascript frontend on
+                  top of the Shopify CMS.
+                </p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.cardonskin.com"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
+                </ul>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img src="images/ami-ami.png" alt="ami ami website picture"
+                /></a>
+                <h3>Ami Ami</h3>
+                <p>
+                  <strong>Javascript, Vue, Tailwind, Shopify</strong>
+                  - Custom E-Commerce Website providing Korean skincare products
+                  to customers in the U.S. Built with a Javascript frontend on
+                  top of the Shopify CMS.
+                </p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.ami-ami.vin"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
+                </ul>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img src="images/drink-libby.png" alt=""
+                /></a>
+                <h3>Libby</h3>
+                <p>
+                  <strong>Javascript, Vue, Tailwind, Shopify</strong>
+                  - Custom E-Commerce Website providing quirky wine products
+                  to customers in the U.S. Built with a Javascript frontend on
+                  top of the Shopify CMS.
+                </p>
+                <ul class="actions">
+                  <li><a href="#" class="button">More</a></li>
+                </ul>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img src="images/loisa.png" alt=""
+                /></a>
+                <h3>Loisa</h3>
+                <p>
+                  <strong>Javascript, Vue, Tailwind, Shopify</strong>
+                  - Custom E-Commerce Website providing Korean skincare products
+                  to customers in the U.S. Built with a Javascript frontend on
+                  top of the Shopify CMS.
+                </p>
+                <ul class="actions">
+                  <li><a href="#" class="button">More</a></li>
+                </ul>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img src="images/deux.png" alt=""
+                /></a>
+                <h3>DEUX</h3>
+                <p>
+                  <strong>Javascript, Vue, Tailwind, Shopify</strong>
+                  - Custom E-Commerce Website providing Korean skincare products
+                  to customers in the U.S. Built with a Javascript frontend on
+                  top of the Shopify CMS.
+                </p>
+                <ul class="actions">
+                  <li><a href="#" class="button">More</a></li>
+                </ul>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img src="images/velvet-caviar.png" alt=""
+                /></a>
+                <h3>Velvet Caviar</h3>
+                <p>
+                  <strong>Javascript, Vue, Tailwind, Shopify</strong>
+                  - Custom E-Commerce Website providing Korean skincare products
+                  to customers in the U.S. Built with a Javascript frontend on
+                  top of the Shopify CMS.
+                </p>
+                <ul class="actions">
+                  <li><a href="#" class="button">More</a></li>
+                </ul>
+              </article>
+            </div>
+          </section>
+        </div>
+      </div>
 
-						</div>
-					</div>
-
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
-
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<!-- <li><a href="index.html">Homepage</a></li>
+      <!-- Sidebar -->
+      <div id="sidebar">
+        <div class="inner">
+          <!-- Menu -->
+          <nav id="menu">
+            <header class="major">
+              <h2>Menu</h2>
+            </header>
+            <ul>
+              <!-- <li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="elements.html">Elements</a></li> -->
-										<!-- <li>
+              <!-- <li>
 											<span class="opener">Submenu</span>
 											<ul>
 												<li><a href="#">Lorem Dolor</a></li>
@@ -170,37 +269,50 @@
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
 										<li><a href="#">Amet Lacinia</a></li> -->
-									</ul>
-								</nav>
+            </ul>
+          </nav>
 
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
-									<p>Reach out and lets start a conversation!</p>
-									<ul class="contact">
-										<li class="icon brands fa-linkedin"><a name="Linked-In" target="_blank" href="https://linkedin.com/in/bsahota" class="">BrianSahota.com/LinkedIn</a></li>
-										<li class="icon brands fa-github"><a name="Github" target="_blank" href="https://github.com/scratchytube" class="">BrianSahota.com/Github</a></li>
-									</ul>
-								</section>
+          <!-- Section -->
+          <section>
+            <header class="major">
+              <h2>Get in touch</h2>
+            </header>
+            <p>Reach out and lets start a conversation!</p>
+            <ul class="contact">
+              <li class="icon brands fa-linkedin">
+                <a
+                  name="Linked-In"
+                  target="_blank"
+                  href="https://linkedin.com/in/bsahota"
+                  class=""
+                  >BrianSahota.com/LinkedIn</a
+                >
+              </li>
+              <li class="icon brands fa-github">
+                <a
+                  name="Github"
+                  target="_blank"
+                  href="https://github.com/scratchytube"
+                  class=""
+                  >BrianSahota.com/Github</a
+                >
+              </li>
+            </ul>
+          </section>
 
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy;All rights reserved.</p>
-								</footer>
+          <!-- Footer -->
+          <footer id="footer">
+            <p class="copyright">&copy;All rights reserved.</p>
+          </footer>
+        </div>
+      </div>
+    </div>
 
-						</div>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
