--- a/index.html
+++ b/index.html
@@ -97,8 +97,13 @@
             </header>
             <div class="posts">
               <article>
-                <a href="#" class="image"
-                  ><img src="images/ff.png" alt="freelance founders website image"
+                <a
+                  target="_blank"
+                  href="https://www.freelancefounders.com"
+                  class="image"
+                  ><img
+                    src="images/ff.png"
+                    alt="freelance founders website image"
                 /></a>
                 <h3>Freelance Founders</h3>
                 <p>
@@ -106,13 +111,12 @@
                     >Javascript, Vue, Tailwind, Sanity Cloud CMS, MemberStack
                     API, Vercel</strong
                   >
-                  - Full Stack web application designed
-                  exclusively for freelancers seeking to elevate their careers.
-                  With a focus on fostering a vibrant community, the platform
-                  offers a secure, paywalled environment where professionals can
-                  sign up to network, share insights, and discover a wide range
-                  of job postings and events tailored to their skills and
-                  interests.
+                  - Full Stack web application designed for freelancers seeking
+                  to elevate their careers. With a focus on fostering a vibrant
+                  community, the platform offers a secure, paywalled environment
+                  where professionals can sign up to network, share insights,
+                  and discover a wide range of job postings and events tailored
+                  to their skills and interests.
                 </p>
                 <ul class="actions">
                   <li>
@@ -126,7 +130,41 @@
                 </ul>
               </article>
               <article>
-                <a href="#" class="image"
+                <a
+                  target="_blank"
+                  href="https://peadars-woodshop.netlify.app/"
+                  class="image"
+                  ><img
+                    src="images/peadars-woodshop.png"
+                    alt="peadars woodshop image"
+                /></a>
+                <h3>Peadars Woodshop</h3>
+                <p>
+                  <strong
+                    >Javascript, React, Styled Components, Ruby on Rails</strong
+                  >
+                  - E-Commerce web app e-commerce offering a wide range of
+                  custom wood products. Developed with a full-stack approach, it
+                  integrates cutting-edge front-end technologies for a seamless
+                  user interface with robust back-end systems to manage
+                  inventory, orders, and customer interactions efficiently.
+                </p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://peadars-woodshop.netlify.app/"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
+                </ul>
+              </article>
+              <article>
+                <a
+                  target="_blank"
+                  href="https://www.cardonskin.com"
+                  class="image"
                   ><img src="images/cardon.png" alt=""
                 /></a>
                 <h3>Cardon</h3>
@@ -148,15 +186,15 @@
                 </ul>
               </article>
               <article>
-                <a href="#" class="image"
+                <a target="_blank" href="https://www.ami-ami.vin" class="image"
                   ><img src="images/ami-ami.png" alt="ami ami website picture"
                 /></a>
                 <h3>Ami Ami</h3>
                 <p>
                   <strong>Javascript, Vue, Tailwind, Shopify</strong>
-                  - Custom E-Commerce Website providing Korean skincare products
-                  to customers in the U.S. Built with a Javascript frontend on
-                  top of the Shopify CMS.
+                  - Custom E-Commerce Website providing wine products to
+                  customers in the U.S. Built with a Javascript frontend on top
+                  of the Shopify CMS.
                 </p>
                 <ul class="actions">
                   <li>
@@ -170,63 +208,94 @@
                 </ul>
               </article>
               <article>
-                <a href="#" class="image"
+                <a
+                  target="_blank"
+                  href="https://www.drinklibby.com"
+                  class="image"
                   ><img src="images/drink-libby.png" alt=""
                 /></a>
                 <h3>Libby</h3>
                 <p>
                   <strong>Javascript, Vue, Tailwind, Shopify</strong>
-                  - Custom E-Commerce Website providing quirky wine products
-                  to customers in the U.S. Built with a Javascript frontend on
-                  top of the Shopify CMS.
+                  - Custom E-Commerce Website providing quirky wine products to
+                  customers in the U.S. Built with a Javascript frontend on top
+                  of the Shopify CMS.
                 </p>
                 <ul class="actions">
-                  <li><a href="#" class="button">More</a></li>
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.drinklibby.com"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
                 </ul>
               </article>
               <article>
-                <a href="#" class="image"
+                <a target="_blank" href="https://www.loisa.com" class="image"
                   ><img src="images/loisa.png" alt=""
                 /></a>
                 <h3>Loisa</h3>
                 <p>
                   <strong>Javascript, Vue, Tailwind, Shopify</strong>
-                  - Custom E-Commerce Website providing Korean skincare products
+                  - Custom E-Commerce Website providing Latin seasoning products
                   to customers in the U.S. Built with a Javascript frontend on
                   top of the Shopify CMS.
                 </p>
                 <ul class="actions">
-                  <li><a href="#" class="button">More</a></li>
+                  <li>
+                    <a href="https://www.loisa.com/" class="button"
+                      >Live Site</a
+                    >
+                  </li>
                 </ul>
               </article>
               <article>
-                <a href="#" class="image"
+                <a target="_blank" href="https://www.eatdeaux.com" class="image"
                   ><img src="images/deux.png" alt=""
                 /></a>
                 <h3>DEUX</h3>
                 <p>
                   <strong>Javascript, Vue, Tailwind, Shopify</strong>
-                  - Custom E-Commerce Website providing Korean skincare products
-                  to customers in the U.S. Built with a Javascript frontend on
-                  top of the Shopify CMS.
+                  - Custom E-Commerce Website providing healthy cookie dough
+                  alternative products to customers in the U.S. Built with a
+                  Javascript frontend on top of the Shopify CMS.
                 </p>
                 <ul class="actions">
-                  <li><a href="#" class="button">More</a></li>
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.eatdeaux.com"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
                 </ul>
               </article>
               <article>
-                <a href="#" class="image"
+                <a
+                  target="_blank"
+                  href="https://velvetcaviar.com/"
+                  class="image"
                   ><img src="images/velvet-caviar.png" alt=""
                 /></a>
                 <h3>Velvet Caviar</h3>
                 <p>
                   <strong>Javascript, Vue, Tailwind, Shopify</strong>
-                  - Custom E-Commerce Website providing Korean skincare products
-                  to customers in the U.S. Built with a Javascript frontend on
-                  top of the Shopify CMS.
+                  - Custom E-Commerce Website providing phone case products to
+                  customers in the U.S. Built with a Javascript frontend on top
+                  of the Shopify CMS.
                 </p>
                 <ul class="actions">
-                  <li><a href="#" class="button">More</a></li>
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://velvetcaviar.com/"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
                 </ul>
               </article>
             </div>
