--- a/index.html
+++ b/index.html
@@ -161,24 +161,20 @@
                 </ul>
               </article>
               <article>
-                <a
-                  target="_blank"
-                  href="https://www.cardonskin.com"
-                  class="image"
-                  ><img src="images/cardon.png" alt=""
+                <a target="_blank" href="https://www.sabah.am" class="image"
+                  ><img src="images/sabah.png" alt="sabah website image"
                 /></a>
-                <h3>Cardon</h3>
+                <h3>Sabah</h3>
                 <p>
-                  <strong>Javascript, Vue, Tailwind, Shopify</strong>
-                  - Custom E-Commerce Website providing Korean skincare products
-                  to customers in the U.S. Built with a Javascript frontend on
-                  top of the Shopify CMS.
+                  - Custom E-Commerce Website providing swaggy shoe products to
+                  customers in the U.S. Built with a Javascript frontend on top
+                  of the Shopify CMS.
                 </p>
                 <ul class="actions">
                   <li>
                     <a
                       target="_blank"
-                      href="https://www.cardonskin.com"
+                      href="https://www.sabah.am"
                       class="button"
                       >Live Site</a
                     >
@@ -252,7 +248,7 @@
                 </ul>
               </article>
               <article>
-                <a target="_blank" href="https://www.eatdeaux.com" class="image"
+                <a target="_blank" href="https://www.eatdeux.com/" class="image"
                   ><img src="images/deux.png" alt=""
                 /></a>
                 <h3>DEUX</h3>
@@ -266,7 +262,32 @@
                   <li>
                     <a
                       target="_blank"
-                      href="https://www.eatdeaux.com"
+                      href="https://www.eatdeux.com/"
+                      class="button"
+                      >Live Site</a
+                    >
+                  </li>
+                </ul>
+              </article>
+              <article>
+                <a
+                  target="_blank"
+                  href="https://www.cardonskin.com"
+                  class="image"
+                  ><img src="images/cardon.png" alt=""
+                /></a>
+                <h3>Cardon</h3>
+                <p>
+                  <strong>Javascript, Vue, Tailwind, Shopify</strong>
+                  - Custom E-Commerce Website providing Korean skincare products
+                  to customers in the U.S. Built with a Javascript frontend on
+                  top of the Shopify CMS.
+                </p>
+                <ul class="actions">
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://www.cardonskin.com"
                       class="button"
                       >Live Site</a
                     >
