updated sabah copy

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                 /></a>
                 <h3>Sabah</h3>
                 <p>
+                  <strong>Javascript, Vue, Tailwind, Shopify</strong>
                   - Custom E-Commerce Website providing swaggy shoe products to
                   customers in the U.S. Built with a Javascript frontend on top
                   of the Shopify CMS.
