updated sabah with github

--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
                       >Live Site</a
                     >
                   </li>
+                  <li>
+                    <a
+                      target="_blank"
+                      href="https://github.com/scratchytube/peadars_workshop"
+                      class="button"
+                      >Github</a
+                    >
+                  </li>
                 </ul>
               </article>
               <article>
@@ -295,7 +303,7 @@
                   </li>
                 </ul>
               </article>
-              <article>
+              <!-- <article>
                 <a
                   target="_blank"
                   href="https://velvetcaviar.com/"
@@ -319,7 +327,7 @@
                     >
                   </li>
                 </ul>
-              </article>
+              </article> -->
             </div>
           </section>
         </div>
